tests/bugs/do_force_void_681.sy
g :: fn do
    1
end

f :: fn do
    g'
end

start :: fn do
    print' f'
end

// error: The `void` has no values
